# Natural_Language_Processing

./: .env  .gitignore  Dockerfile  PIPELINE_USAGE.md  README.md  backup_restore.py  citationExtractor.py  clean.py  config.py  db.py  docker-compose.yml  fetch.py  generate_popular_articles_2025.py  main.py  models.py  person2_demo.py  pipeline.py  popular_articles_2025.txt  pyproject.toml  requirements.txt  restore_article_content.py  topic_vector_db_5passages_runner.py  topic_vector_db_runner.py  topic_vector_demo.py  util.py  wiki.py
DataCollection/: citationExtractor.py
Project1/: .dockerignore  .env  .gitignore  POSTGRES.md  README.md  _faiss_reset.py  docker-compose.yml
Project2/: .gitignore
Proposal/: proposal.aux  proposal.fdb_latexmk  proposal.fls  proposal.out  proposal.tex  proposal_detailed.tex  proposal_vague.tex
article_generation/: __init__.py  config.py  db.py  evaluation.py  generation.py  models.py  prompting.py  retrieval.py  run_baseline.py
backup-tools/: README.md  backup_restore.py
db/: __init__.py  models.py  session.py
db-backup-tools/: README.md  __main__.py  config.py  core.py  main.py  restore.py
docu/: docker_structure.puml  faiss_embedding_flow.puml
embedding_pipeline/: PIPELINE_USAGE.md  TOPIC_INFERENCE_GUIDE.md  topic_inference.py  topic_passage_search_demo.py  topic_vector_db_runner.py  topic_vector_demo.py  topic_vector_pipeline.py  vector_index.py
eval/: evaluate_metrics.py  pick_article_pair.py
pipeline/: __init__.py  article_collection.py  citation_extraction.py  db_saving.py  document_cleaning.py  document_fetching.py  mock_articles.py  passage_creation.py  shared_pipeline.py  topic_inference.py  topic_vector_pipeline.py  vector_index.py  wikipedia_top_articles.py
utils/: __init__.py  nltk_setup.py  progress.py  text_normalization.py
vector_indices/: 0_article.faiss  100_article.faiss  101_article.faiss  (+968 more)
(+367 files in other folders)
