[project]
name = "natural-language-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "acronym-expander>=0.0.2",
    "beautifulsoup4>=4.14.3",
    "bert-score>=0.3.13",
    "charset-normalizer>=3.4.6",
    "faiss-cpu>=1.8.0",
    "ftfy>=6.3.1",
    "nltk>=3.9.3",
    "numpy>=2.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.1",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "torch>=2.11.0",
    "urllib3>=2.6.3",
]
